--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,3 +5,7 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 </web-app>
+<listener>
+    <listener-class>com.abc.MetricsInitializer</listener-class>
+</listener>
+
